Some documentation and polishing.