@@ -7,14 +7,14 @@ import space.nixus.maddoc.Room;
 import space.nixus.maddoc.items.LightSwitch;
 import space.nixus.maddoc.items.SpellBook;
 
-import java.io.Serializable;
-import java.util.Arrays;
 import java.util.List;
 
 public class RestRoom extends Room {
 
+    /** Name/id */
     public static final String NAME = "rest-room";
-    public static final List<String> LINKS = Arrays.asList(EntryHall.NAME);
+    /** List of room connections. */
+    public static final List<String> LINKS = List.of(EntryHall.NAME);
 
     @Override
     public boolean isLit() {
@@ -34,11 +34,10 @@ public class RestRoom extends Room {
     @Override
     public void describe() {
         Game.fmt("The rest room.");
-        if(isLit()) {
+        if (isLit()) {
             Game.fmt("Your average public rest room.\n" +
                     "Not so sanitary...");
-        }
-        else {
+        } else {
             Game.fmt("You need light.");
         }
         Game.fmt("You can go back to the [%s].", EntryHall.NAME);
@@ -51,9 +50,8 @@ public class RestRoom extends Room {
     }
 
     public void load(JsonObject cfg) throws Exception {
-        if(cfg==null) {
+        if (cfg == null) {
             inventory.init(new LightSwitch(), new SpellBook());
-        }
-        else super.load(cfg);
+        } else super.load(cfg);
     }
 }
