@@ -4,19 +4,18 @@ import com.google.gson.JsonObject;
 import space.nixus.maddoc.Game;
 import space.nixus.maddoc.PlayerContext;
 import space.nixus.maddoc.Room;
-import space.nixus.maddoc.items.LightSwitch;
 import space.nixus.maddoc.items.RightHand;
 import space.nixus.maddoc.items.RitualTable;
 import space.nixus.maddoc.items.WallTorch;
 
-import java.io.Serializable;
-import java.util.Arrays;
 import java.util.List;
 
 public class RitualRoom extends Room {
 
+    /** Name/id */
     public static final String NAME = "ritual-room";
-    private static final List<String> LINKS = Arrays.asList( Basement.NAME );
+    /** List of room connections. */
+    private static final List<String> LINKS = List.of(Basement.NAME);
 
     @Override
     public String getName() {
@@ -30,11 +29,10 @@ public class RitualRoom extends Room {
 
     @Override
     public void describe() {
-        if(isLit()) {
+        if (isLit()) {
             Game.fmt("The room is very small. A table is set\n" +
                     "in the center of the room.");
-        }
-        else {
+        } else {
             Game.fmt("It is dark and damp.");
         }
         inventory.describe();
@@ -42,8 +40,7 @@ public class RitualRoom extends Room {
 
     @Override
     public boolean isLit() {
-        var itm = getInventory().getItem(WallTorch.NAME);
-        return itm!=null && itm.hasFlags("lit");
+        return getInventory().getItem(WallTorch.NAME).hasFlags("lit");
     }
 
     @Override
@@ -52,9 +49,8 @@ public class RitualRoom extends Room {
     }
 
     public void load(JsonObject cfg) throws Exception {
-        if(cfg==null) {
+        if (cfg == null) {
             inventory.init(new RitualTable(), new WallTorch(), new RightHand());
-        }
-        else super.load(cfg);
+        } else super.load(cfg);
     }
 }
